# MFRC522-python

./: README.md  pyproject.toml  setup.py
examples/: read.py  write.py
joyit_mfrc522/: SimpleMFRC522.py
src/JoyIT_RC522/: SimpleMFRC522.py  __init__.py
src/joyit_mfrc522/: MFRC522.py
